Get UI book info displayed on webpage
Need to fix the code so that the entire array isn't added again each
time one book is added.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
             <input id="pages" type="number">
             <label for="read">Read?</label>
             <input id="read" type="checkbox">
+            <button id="addBtn">Add Book</button>
         </div>
-        <div class="card"></div>
+        <div class="cards"></div>
     </div>
 </body>
 </html>
