--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="container">
+    <div class="header">
         <h1>Library</h1>
-        <button id="openModal">Add Book</button>
+    </div>
+    <div class="container">
+        <button id="openModal">+</button>
         <div class="modal" id="myModal">
             <div class="modal-content">
                 <span class="close">&times;</span>
