Fix read status issue and modify styling

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button id="openModal">+</button>
         <div class="modal" id="myModal">
             <div class="modal-content">
-                <span class="close">&times;</span>
+                <span class="closeModal">&times;</span>
                 <div class="title">
                     <label for="title">Title:</label>
                     <input id="title" type="text">
